--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "^6.3",
-        "phpunit/phpunit": "^7.4",
-        "mockery/mockery": "^1.2"
+        "phpunit/phpunit": "~5",
+        "mockery/mockery": "^1.1"
     },
     "autoload": {
         "psr-4": {
